--- a/pages/grades-reporting.html
+++ b/pages/grades-reporting.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Grades&amp;Reporting</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+<link rel="stylesheet" type="text/css" href="../style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
 </head>
 <body>
