--- a/pages/grades-reporting.html
+++ b/pages/grades-reporting.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <title>Grades&amp;Reporting</title>
 <link rel="stylesheet" type="text/css" href="../style.css">
-<link rel="stylesheet" type="text/css" href="css-circle/circle.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700" rel="stylesheet">
 </head>
@@ -79,30 +78,21 @@
           <h1 class="content-Subtitle-Text">Into to Web Applications</h1>
           <!-- The grade is given a white background to work inside of -->
           <div class="grades-Background">
-            <div class="clearfix">
-                <div class="c100 p12 small">
-                    <span>12%</span>
-                    <div class="slice">
-                        <div class="bar"></div>
-                        <div class="fill"></div>
-                    </div>
-                </div>
-
-            </div>
+            <div class="grades-Circles">
               <div class="grades-Circle-Highlight">
                 <h1 class="grades-Complete-Text">40%</h1>
-                <p class="grades-Dates-Text"> of class completed</p>
+                <p class="grades-Dates-Text complete-Class"> of class completed</p>
               </div>
             </div>
           </div>
           <!-- More divs are used inside of the white box to  -->
           <div class="grades-Start-Date">
-            <h6 class="grades-Dates-Text">Start Date:</h6>
-            <p class="grades-Dates-Text">August 20, 2017</p>
+            <h6 class="grades-Dates-Text date-Font">START DATE:</h6>
+            <p class="grades-Dates-Text dates-Class">August 20, 2017</p>
           </div>
           <div class="grades-End-Date">
-            <h6 class="grades-Dates-Text">End Date:</h6>
-            <p class="grades-Dates-Text">December 15, 2017</p>
+            <h6 class="grades-Dates-Text date-Font">END DATE:</h6>
+            <p class="grades-Dates-Text dates-Class">December 15, 2017</p>
           </div>
 
           <h4 class="hero-Title-Text">CSET 120, T&amp;W, 12:00pm - 4:30pm</h4>
@@ -112,17 +102,17 @@
             <div class="grades-Circles">
               <div class="grades-Circle-Highlight">
                 <h1 class="grades-Complete-Text">40%</h1>
-                <p class="grades-Dates-Text"> of class completed</p>
+                <p class="grades-Dates-Text complete-Class"> of class completed</p>
               </div>
             </div>
           </div>
           <!-- More divs are used inside of the white box to  -->
           <div class="grades-Start-Date">
-            <h6 class="grades-Dates-Text">Start Date:</h6>
+            <h6 class="grades-Dates-Text date-Font">START DATE:</h6>
             <p class="grades-Dates-Text">August 20, 2017</p>
           </div>
           <div class="grades-End-Date">
-            <h6 class="grades-Dates-Text">End Date:</h6>
+            <h6 class="grades-Dates-Text date-Font">END DATE:</h6>
             <p class="grades-Dates-Text">December 15, 2017</p>
           </div>
 
@@ -133,17 +123,17 @@
             <div class="grades-Circles">
               <div class="grades-Circle-Highlight">
                 <h1 class="grades-Complete-Text">40%</h1>
-                <p class="grades-Dates-Text"> of class completed</p>
+                <p class="grades-Dates-Text complete-Class"> of class completed</p>
               </div>
             </div>
           </div>
           <!-- More divs are used inside of the white box to  -->
           <div class="grades-Start-Date">
-            <h6 class="grades-Dates-Text">Start Date:</h6>
+            <h6 class="grades-Dates-Text date-Font">START DATE:</h6>
             <p class="grades-Dates-Text">August 20, 2017</p>
           </div>
           <div class="grades-End-Date">
-            <h6 class="grades-Dates-Text">End Date:</h6>
+            <h6 class="grades-Dates-Text date-Font">END DATE:</h6>
             <p class="grades-Dates-Text">December 15, 2017</p>
           </div>
 
@@ -154,17 +144,17 @@
             <div class="grades-Circles">
               <div class="grades-Circle-Highlight">
                 <h1 class="grades-Complete-Text">40%</h1>
-                <p class="grades-Dates-Text"> of class completed</p>
+                <p class="grades-Dates-Text complete-Class"> of class completed</p>
               </div>
             </div>
           </div>
           <!-- More divs are used inside of the white box to  -->
           <div class="grades-Start-Date">
-            <h6 class="grades-Dates-Text">Start Date:</h6>
+            <h6 class="grades-Dates-Text date-Font">START DATE:</h6>
             <p class="grades-Dates-Text">August 20, 2017</p>
           </div>
           <div class="grades-End-Date">
-            <h6 class="grades-Dates-Text">End Date:</h6>
+            <h6 class="grades-Dates-Text date-Font">END DATE:</h6>
             <p class="grades-Dates-Text">December 15, 2017</p>
           </div>
 
@@ -175,17 +165,17 @@
             <div class="grades-Circles">
               <div class="grades-Circle-Highlight">
                 <h1 class="grades-Complete-Text">40%</h1>
-                <p class="grades-Dates-Text"> of class completed</p>
+                <p class="grades-Dates-Text complete-Class"> of class completed</p>
               </div>
             </div>
           </div>
           <!-- More divs are used inside of the white box to  -->
           <div class="grades-Start-Date">
-            <h6 class="grades-Dates-Text">Start Date:</h6>
+            <h6 class="grades-Dates-Text date-Font">START DATE:</h6>
             <p class="grades-Dates-Text">August 20, 2017</p>
           </div>
           <div class="grades-End-Date">
-            <h6 class="grades-Dates-Text">End Date:</h6>
+            <h6 class="grades-Dates-Text date-Font">END DATE:</h6>
             <p class="grades-Dates-Text">December 15, 2017</p>
           </div>
 
@@ -196,17 +186,17 @@
             <div class="grades-Circles">
               <div class="grades-Circle-Highlight">
                 <h1 class="grades-Complete-Text">40%</h1>
-                <p class="grades-Dates-Text"> of class completed</p>
+                <p class="grades-Dates-Text complete-Class"> of class completed</p>
               </div>
             </div>
           </div>
           <!-- More divs are used inside of the white box to  -->
           <div class="grades-Start-Date">
-            <h6 class="grades-Dates-Text">Start Date:</h6>
+            <h6 class="grades-Dates-Text date-Font">START DATE:</h6>
             <p class="grades-Dates-Text">August 20, 2017</p>
           </div>
           <div class="grades-End-Date">
-            <h6 class="grades-Dates-Text">End Date:</h6>
+            <h6 class="grades-Dates-Text date-Font">END DATE:</h6>
             <p class="grades-Dates-Text">December 15, 2017</p>
           </div>
         </div>
@@ -324,6 +314,6 @@
 
     </section>
   </section>
-  <script src="script.js" type="text/javascript"></script>
+  <script src="../script.js" type="text/javascript"></script>
 </body>
 </html>
